# forager-agents

./: .gitignore  .gitmodules  pyproject.toml  run.sh  run_sweeps.sh
clusters/: cedar.json  cedar_g_t12_c1_m2000_s1.json  cedar_g_t18_c1_m24000_s1.json  cedar_g_t18_c1_m4000_s1.json  cedar_g_t1_c1_m2000_s1.json  cedar_g_t1_c2_m2000_s1.json  cedar_g_t1_c3_m2000_s1.json  cedar_g_t3_c3_m2000_s1.json  cedar_t12_c1_m4000_s1.json  cedar_t1_c1_m2000_s1.json  cedar_t1_c4_m2000.json  cedar_t3_c1_m2000_s4.json  cedar_t3_c4_m2000_s64.json  cedar_t8_c1_m2000_s1.json  cedar_t8_c4_m4000.json  debug_cedar.json
data/ECA_non-blended_custom/: TG_SOUID100897.txt  TG_SOUID100928.txt  TG_SOUID100929.txt  TG_SOUID100930.txt  TG_SOUID100931.txt  TG_SOUID106714.txt  TG_SOUID106715.txt  TG_SOUID106716.txt  TG_SOUID106717.txt  TG_SOUID106718.txt  TG_SOUID106930.txt  (+114 more)
scripts/: big-1-percent-sweep.sh  big.sh  debug.sh  env-figures.sh  forager-extra-large-short-slurm.sh  forager-extra-large-slurm.sh  forager-extra-large-sweep-slurm.sh  forager-extra-large-sweep.sh  forager-extra-large.sh  forager-temp-fix-DQN-11.sh  forager-temp-fix-slow-DQN-11.sh  forager-temp-fix-slow-video.sh  forager-temp-fix-slow.sh  forager-temp-fix.sh  forager-temperature-sweep.sh  forager-temperature.sh  forager-two-biome-large-slurm.sh  forager-two-biome-large-sweep.sh  forager-two-biome-large.sh  forager-two-biome-small-sweep.sh  forager-two-biome-small.sh  forager-weather.sh  forager.sh  jellybean-world-extra-large-short-slurm.sh  jellybean-world-extra-large-slurm.sh  jellybean-world-extra-large-sweep-slurm.sh  jellybean-world-extra-large-sweep.sh  jellybean-world-extra-large.sh  kill_pycache.py  local.py  local_node_venv.sh  plot.sh  setup_cc.sh  slurm_gpu.py  sync_results.sh  t-maze.sh  zip_images.py  zip_videos.py
src/: continuing_main.py
(+171 files in other folders)
